--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Black Hmong dialect'
 - !lcsh 'China -- Description and travel'
 - !lcc 'DS'
+- GITenberg
 title: 'Three Years in Western China
 
   A Narrative of Three Journeys in Ssu-ch''uan, Kuei-chow, and Yün-nan'
